# Go-PR-Bot

./: .env.example  .gitignore  IMPLEMENTATION_CONTEXT.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  feature_improvement.yml
docs/: ARCHITECTURE.md  EVALUATION.md  GITHUB_ISSUES.md
samples/f3934252-659f-48b2-a936-765c7e7869dd/: PR.md  branch_meta.json  changes.patch  code_graph.json  coder_meta.json  context_bundle.json  fix_meta.json  integrator_meta.json  issue_context.json  plan.json  proposed.patch  repo_map.json  repo_meta.json  review.json  run_meta.json  scope_hints.json  search_hits.json  test_result.json
skills/_default/: SKILL.md  test-awareness.md
skills/gin-gonic__gin/: SKILL.md
skills/gin-gonic_gin/: SKILL.md
tests/: conftest.py  helpers.py  test_branching.py  test_checkpointer.py  test_cli.py  test_cli_branch.py  test_cli_resume.py  test_code_graph.py  test_coder.py  test_config.py  test_context_builder.py  test_context_ranker.py  test_context_refresh.py  test_cost_tracker.py  test_fixer.py  test_fixer_scope_expansion.py  test_github_issues.py  test_github_pr.py  test_integrator.py  test_issue_scope.py  test_lint_runner.py  test_llm_client.py  test_orchestrator.py  test_patches.py  test_planner.py  test_planner_test_awareness.py  test_pr_writer.py  test_repo_map.py  test_repo_rag.py  test_repo_search.py  test_reviewer.py  test_run_context.py  test_scoped_test_runner.py  test_skills_cobra.py  test_skills_gin.py  test_skills_golangci_lint.py  test_skills_loader.py  test_skills_validator.py  test_slug.py  test_test_runner.py  (+1 more)
(+48 files in other folders)
