[project]
name = "go-agent"
version = "0.1.0"
description = "Agentic AI contributor for approved open-source Go projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "litellm>=1.40",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "pygithub>=2.3",
    "gitpython>=3.1",
    "httpx>=0.27",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.4", "pytest-asyncio>=0.23"]
mcp = ["mcp>=1.0"]
rag = ["chromadb>=0.5", "sentence-transformers>=3.0"]
memory = ["mem0ai>=0.1"]

[project.scripts]
go-agent = "go_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/go_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
